[package]
name = "termibbl"
version = "0.1.0"
authors = ["Leon Kowarschick <lkowarschick@gmail.com>"]
edition = "2018"

[profile.release]
lto = true

[dependencies]
crossterm = { version = "0.17", features = ["event-stream"] }
tui = { version = "0.9", default-features = false, features = ['crossterm'] }
line_drawing = "0.8.0"

bytes = "0.5.0"
futures-util = { version = "0.3", default-features = false, features = ["async-await", "sink", "std"] }
rand = "0.7"

serde = { version = "1.0.111", features = ["derive"] }
bincode = "1.3.1"

tokio = { version = "0.2", features=["full"] }
tokio-util = { version = "0.3", features = ["codec"] }

uuid = { version = "0.8.1", features = ["v4"] }
futures-timer = "3.0"

log = "0.4.11"
pretty_env_logger = "0.4.0"

argh = "0.1.4"

actix = "0.10.0"
actix-rt = "1.0"
actix_derive = "0.5"

itertools = "0.9.0"
reqwest = "0.10.9"
laminar = "0.4.0"
tokio-tungstenite = "0.12.0"
tungstenite = "0.11.1"
